# AtlasSphere

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
blend/: ConstrainedPlanningSphere.blend  ConstrainedPlanningSphere.blend1  ConstrainedPlanningSphere.stl
blender/: ConstrainedPlanningSphere.blend
python/: samplePath.py  sample_path.py
pytorch_sphere/: data_loader.py  kinect_rgb_db.py  models.py  train.py
scripts/: convert_model_to_torchscript.py  convert_point_cloud_to_voxel.py  convert_voxel_to_embedded_voxel.py  export_compnet_to_cpp.py  generate_dataset.py  get_sphere_voxel.py  main.py  models.py  preprocess_path.py  sample_path.py  smooth_path.py  temp.py  visual_check.py
src/: .clang-format  AtlasStateSpace.cpp  BITstar.cpp  CMakeLists.txt  FMT.cpp  ImplicitGraph.cpp  MPNetPlanner.cpp  MPNetSampler.cpp  Parameter.cpp  RRTConnect.cpp  RRTstar.cpp  SpherePlanning.cpp  main.cpp  python_plugin.cpp
src/executable/: GenerateBrickConfig.cpp  GeneratePointCloud.cpp  GenerateTestingStartAndGoal.cpp  GenerateTrainingPath.cpp  GenerateTrainingStartAndGoal.cpp  TestCoMPNet.cpp  TestRRTConnect.cpp  temp.cpp
src/include/: FMT.h  ImplicitGraph.h  MPNetPlanner.h  MPNetSampler.h  Parameter.h  SphereConstraint.h  SpherePlanning.h  SphereValidityChecker.h
src/planner/: RRTConnect.cpp  RRTstar.cpp
src/planner/include/: FMT.h
src/spherePlanning/: MotionValidator.h  Parameter.h  SphereConstraint.h  SpherePlanning.h  SphereValidityChecker.h
src/spherePlanning/planner/: MPNetPlanner.h  MPNetSampler.h  RRTstar.h
src/spherePlanning/planner/src/: FMT.cpp  MPNetPlanner.cpp  MPNetSampler.cpp  RRTConnect.cpp
src/spherePlanning/src/: Parameter.cpp  SpherePlanning.cpp
